--- a/index.html
+++ b/index.html
@@ -30,28 +30,44 @@
         <div id="row_3" class="row content_row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="row">
-                    <div id="project_1" class="col-md-3 project">
-                        <span>원 페이지</span>
-                    </div>
-                    <div id="block_1" class="col-md-1 block"></div>
-                    <div id="block_2" class="col-md-2 block"></div>
+                    <a href="">
+                        <div id="project_1" class="col-md-3 project">
+                            <div>
+                                <span>원 페이지</span>
+                            </div>
+                        </div>
+                    </a>
+                    <!-- <div id="block_1" class="col-md-1 block"></div> -->
+                    <div id="block_2" class="col-md-3 block"></div>
                     <div id="block_3" class="col-md-1 block"></div>
-                    <div id="project_2" class="col-md-5 project">
-                        <span>스크롤 없는 원 페이지</span>
-                    </div>
+                    <a href="">
+                        <div id="project_2" class="col-md-5 project">
+                            <div>
+                                <span>스크롤 없는 원 페이지</span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="row">
                     <div id="block_4" class="col-md-1 block"></div>
                     <div id="block_5" class="col-md-1 block"></div>
-                    <div id="project_3" class="col-md-2 project">
-                        <span>jQuery Event</span>
-                    </div>
+                    <a href="">
+                        <div id="project_3" class="col-md-2 project">
+                            <div>
+                                <span>jQuery Event</span>
+                            </div>
+                        </div>
+                    </a>
                     <div id="block_6" class="col-md-1 block"></div>
-                    <div id="block_7" class="col-md-1 block"></div>
-                    <div id="block_8" class="col-md-1 block"></div>
-                    <div id="project_4" class="col-md-5 project">
-                        <span>이자카야</span>
-                    </div>
+                    <div id="block_7" class="col-md-2 block"></div>
+                    <!-- <div id="block_8" class="col-md-1 block"></div> -->
+                    <a href="">
+                        <div id="project_4" class="col-md-5 project">
+                            <div>
+                                <span></span>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
