--- a/index.html
+++ b/index.html
@@ -28,46 +28,61 @@
             </div>
         </div>
         <div id="row_3" class="row content_row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="row">
-                    <a href="">
-                        <div id="project_1" class="col-md-3 project">
-                            <div>
-                                <span>원 페이지</span>
-                            </div>
-                        </div>
-                    </a>
-                    <!-- <div id="block_1" class="col-md-1 block"></div> -->
-                    <div id="block_2" class="col-md-3 block"></div>
-                    <div id="block_3" class="col-md-1 block"></div>
-                    <a href="">
-                        <div id="project_2" class="col-md-5 project">
-                            <div>
-                                <span>스크롤 없는 원 페이지</span>
-                            </div>
-                        </div>
-                    </a>
+            <div id="project_1" class="col-md-12 project">
+                <div>
+                    <span>가수 팬 페이지</span>
+                    <p>
+                        <span>원 페이지 형식으로 제작한 '트로이 시반' 가수 팬 페이지입니다.</span>
+                        <span>#HTML</span>
+                        <span>#CSS</span>
+                        <span>#JavaScript</span>
+                        <span>#jQuery</span>
+                    </p>
+                    <div class="plus-to-minus"></div>
                 </div>
-                <div class="row">
-                    <div id="block_4" class="col-md-1 block"></div>
-                    <div id="block_5" class="col-md-1 block"></div>
-                    <a href="">
-                        <div id="project_3" class="col-md-2 project">
-                            <div>
-                                <span>jQuery Event</span>
-                            </div>
-                        </div>
-                    </a>
-                    <div id="block_6" class="col-md-1 block"></div>
-                    <div id="block_7" class="col-md-2 block"></div>
-                    <!-- <div id="block_8" class="col-md-1 block"></div> -->
-                    <a href="">
-                        <div id="project_4" class="col-md-5 project">
-                            <div>
-                                <span></span>
-                            </div>
-                        </div>
-                    </a>
+            </div>
+            <div id="project_2" class="col-md-12 project">
+                <div>
+                    <span>애슐리</span>
+                    <p>
+                        <span>풀 페이지</span>
+                        <span>#HTML</span>
+                        <span>#CSS</span>
+                        <span>#JavaScript</span>
+                        <span>#jQuery</span>
+                        <span>#google map API</span>
+                    </p>
+                    <div class="plus-to-minus"></div>
+                </div>
+            </div>
+            <div id="project_3" class="col-md-12 project">
+                <div>
+                    <span>반 빈센트 고흐 겔러리</span>
+                    <p>
+                        <span>풀 페이지</span>
+                        <span>#HTML</span>
+                        <span>#CSS</span>
+                        <span>#JavaScript</span>
+                        <span>#jQuery</span>
+                        <span>#jquery.eraser.js</span>
+                    </p>
+                    <div class="plus-to-minus"></div>
+                </div>
+            </div>
+            <div id="project_4" class="col-md-12 project">
+                <div>
+                    <span>이자카야</span>
+                    <p>
+                        <span>asdcas</span>
+                        <span>#HTML</span>
+                        <span>#CSS</span>
+                        <span>#JavaScript</span>
+                        <span>#jQuery</span>
+                        <span>#jquery.mousewheel.min.js</span>
+                        <span>#jquery.ui.touch-punch.min.js</span>
+                        <span>#google map API</span>
+                    </p>
+                    <div class="plus-to-minus"></div>
                 </div>
             </div>
         </div>
