--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="row_1" class="row content_row">
             <div class="col-md-12">
                 <img src="img/main.png" alt="main">
+                <span>Scroll Down</span>
             </div>
         </div>
         <div id="row_2" class="row content_row">
@@ -30,7 +31,7 @@
         <div id="row_3" class="row content_row">
             <div id="project_1" class="col-md-12 project">
                 <div>
-                    <span>가수 팬 페이지</span>
+                    <span>Troye Sivan Fan Page</span>
                     <p>
                         <span>원 페이지 형식으로 제작한 '트로이 시반' 가수 팬 페이지입니다.</span>
                         <span>#HTML</span>
@@ -43,9 +44,9 @@
             </div>
             <div id="project_2" class="col-md-12 project">
                 <div>
-                    <span>애슐리</span>
+                    <span>Family Restaurant Ashley</span>
                     <p>
-                        <span>풀 페이지</span>
+                        <span>풀 페이지 형식으로 제작한 애슐리 레스토랑 사이트입니다.</span>
                         <span>#HTML</span>
                         <span>#CSS</span>
                         <span>#JavaScript</span>
@@ -57,9 +58,9 @@
             </div>
             <div id="project_3" class="col-md-12 project">
                 <div>
-                    <span>반 빈센트 고흐 겔러리</span>
+                    <span>Vincent van Gogh Gallery</span>
                     <p>
-                        <span>풀 페이지</span>
+                        <span>제이쿼리가 많이 들어가 역동적인 풀페이지 사이트입니다.</span>
                         <span>#HTML</span>
                         <span>#CSS</span>
                         <span>#JavaScript</span>
@@ -71,9 +72,9 @@
             </div>
             <div id="project_4" class="col-md-12 project">
                 <div>
-                    <span>이자카야</span>
+                    <span>Izakaya</span>
                     <p>
-                        <span>asdcas</span>
+                        <span>다양한 UI/UX 를 생각하여 만든 페이지입니다.</span>
                         <span>#HTML</span>
                         <span>#CSS</span>
                         <span>#JavaScript</span>
