--- a/index.html
+++ b/index.html
@@ -30,61 +30,174 @@
         </div>
         <div id="row_3" class="row content_row">
             <div id="project_1" class="col-md-12 project">
-                <div>
-                    <span>Troye Sivan Fan Page</span>
-                    <p>
-                        <span>원 페이지 형식으로 제작한 '트로이 시반' 가수 팬 페이지입니다.</span>
-                        <span>#HTML</span>
-                        <span>#CSS</span>
-                        <span>#JavaScript</span>
-                        <span>#jQuery</span>
-                    </p>
-                    <div class="plus-to-minus"></div>
+                <span>Troye Sivan Fan Page</span>
+                <p>
+                    <span>원 페이지 형식으로 제작한 '트로이 시반' 가수 팬 페이지입니다.</span>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span><br/>
+                    <span>개발기간 : 2018/06/02 - 2018/06/08</span>
+                </p>
+                <div class="plus-to-minus"></div>
+                <div class="col-md-12 detail">
+                    <div class="col-md-12">
+                        <img src="img/project/project_1_main.jpg" class="img-responsive main_img" alt="main_img">
+                    </div>
+                    <div class="col-md-2 col-md-offset-5">
+                        <button type="button">View WebSite</button>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_1_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-4">
+                        <p>
+                            <span>Main 화면으로 위 상단 메뉴에 HOME을 누르면 나오는 화면입니다.</span>
+                            <span>상단 메뉴는 이름에 위치하는 곳으로 이동됩니다.</span>
+                            <span>하단 메뉴는 SNS 아이콘을 누르면 트로이 시반관련 페이지로 넘어갑니다.</span>
+                            <span>상단 메뉴와 하단 메뉴는 화면을 따라가게 되어있습니다.</span>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_1_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-4">
+                        <p>
+                            <span>Music Player 화면으로 위 상단 메뉴에 ALBUM을 누르면 나오는 화면입니다.</span>
+                            <span>플레이 버튼을 누르면 CD가 돌아가며 노래가 나옵니다.</span>
+                            <span>멈춤 버튼을 누르면 돌아가던 cd와 노래가 멈춥니다.</span>
+                            <span>위, 아래 CD를 누르면 다음 노래와 이전 노래가 선택가능합니다.</span>
+                        </p>
+                    </div>
                 </div>
             </div>
             <div id="project_2" class="col-md-12 project">
-                <div>
-                    <span>Family Restaurant Ashley</span>
-                    <p>
-                        <span>풀 페이지 형식으로 제작한 애슐리 레스토랑 사이트입니다.</span>
-                        <span>#HTML</span>
-                        <span>#CSS</span>
-                        <span>#JavaScript</span>
-                        <span>#jQuery</span>
-                        <span>#google map API</span>
-                    </p>
-                    <div class="plus-to-minus"></div>
-                </div>
+                <span>Family Restaurant Ashley</span>
+                <p>
+                    <span>풀 페이지 형식으로 제작한 애슐리 레스토랑 사이트입니다.</span>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <span>#google map API</span>
+                    <span>Flickity slide</span><br/>
+                    <span>개발기간 : 2018/06/12 - 2018/06/20</span>
+                </p>
+                <div class="plus-to-minus"></div>
+                <div class="col-md-12 detail">
+                        <div class="col-md-12">
+                            <img src="img/project/project_2_main.png" class="img-responsive main_img" alt="main_img">
+                        </div>
+                        <div class="col-md-2 col-md-offset-5">
+                            <button type="button">View WebSite</button>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                            <img src="img/project/project_2_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span>Main 화면으로 상단 로고를 클릭할시 Home으로 돌아옵니다.</span>
+                                <span>상단 좌측에 메뉴바가 있고, 클릭시 링크없이 이동됩니다.</span>
+                                <span>중앙엔 슬라이드가 있어 이벤트 베너를 보여줍니다.</span>
+                            </p>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                            <img src="img/project/project_2_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span>Store 화면으로 가게의 위치를 알려주는 화면입니다.</span>
+                                <span>우측에 가게별 버튼을 누르면 지도 상에 표시가 됩니다.</span>
+                                <span>google map API를 사용하여 구현하였습니다.</span>
+                            </p>
+                        </div>
+                    </div>
             </div>
             <div id="project_3" class="col-md-12 project">
-                <div>
-                    <span>Vincent van Gogh Gallery</span>
-                    <p>
-                        <span>제이쿼리가 많이 들어가 역동적인 풀페이지 사이트입니다.</span>
-                        <span>#HTML</span>
-                        <span>#CSS</span>
-                        <span>#JavaScript</span>
-                        <span>#jQuery</span>
-                        <span>#jquery.eraser.js</span>
-                    </p>
-                    <div class="plus-to-minus"></div>
-                </div>
+                <span>Vincent van Gogh Gallery</span>
+                <p>
+                    <span>제이쿼리를 사용하여 역동적인 풀페이지 사이트입니다.</span>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <span>#jquery.eraser.js</span><br/>
+                    <span>개발기간 : 2018/05/23 - 2018/05/30</span>
+                </p>
+                <div class="plus-to-minus"></div>
+                <div class="col-md-12 detail">
+                        <div class="col-md-12">
+                            <img src="img/project/project_3_main.jpg" class="img-responsive main_img" alt="main_img">
+                        </div>
+                        <div class="col-md-2 col-md-offset-5">
+                            <button type="button">View WebSite</button>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                            <img src="img/project/project_3_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span>Main 화면으로 jquery.eraser.js를 사용하여 화면 지우기를 구현하였습니다.</span>
+                                <span>다만 IE에선 지원을 안함으로 클릭으로 대체하였습니다.</span>
+                                <span>지우게를 사용하듯 클릭하여 지우면 뒤에 화면이 보일것입니다.</span>
+                                <span>일정치 만큼 지워지면 화면이 사라집니다.</span>
+                            </p>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                            <img src="img/project/project_3_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span>우측 엘레베이터를 사용하여 2층으로 올라간 화면입니다.</span>
+                                <span>우측 엘레베이터는 문열림 버튼과 문열릴시 이동버튼 두가지가 있습니다.</span>
+                            </p>
+                        </div>
+                    </div>
             </div>
             <div id="project_4" class="col-md-12 project">
-                <div>
-                    <span>Izakaya</span>
-                    <p>
-                        <span>다양한 UI/UX 를 생각하여 만든 페이지입니다.</span>
-                        <span>#HTML</span>
-                        <span>#CSS</span>
-                        <span>#JavaScript</span>
-                        <span>#jQuery</span>
-                        <span>#jquery.mousewheel.min.js</span>
-                        <span>#jquery.ui.touch-punch.min.js</span>
-                        <span>#google map API</span>
-                    </p>
-                    <div class="plus-to-minus"></div>
-                </div>
+                <span>Izakaya Heekare</span>
+                <p>
+                    <span>다양한 UI/UX 를 생각하여 만든 페이지입니다.</span>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <span>#jquery.mousewheel.min.js</span>
+                    <span>#jquery.ui.touch-punch.min.js</span>
+                    <span>#google map API</span><br/>
+                    <span>개발기간 : 2018/06/02 - 2018/06/08</span>
+                </p>
+                <div class="plus-to-minus"></div>
+                <div class="col-md-12 detail">
+                        <div class="col-md-12">
+                            <img src="img/project/project_4_main.jpg" class="img-responsive main_img" alt="main_img">
+                        </div>
+                        <div class="col-md-2 col-md-offset-5">
+                            <button type="button">View WebSite</button>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                            <img src="img/project/project_4_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span>Main 화면으로 위 상단 메뉴에 HOME을 누르면 나오는 화면이다.</span>
+                                <span>상단 메뉴는 이름에 위치하는 곳으로 이동된다.</span>
+                                <span>하단 메뉴는 SNS 아이콘을 누르면 트로이 시반관련 페이지로 넘어간다.</span>
+                                <span>상단 메뉴와 하단 메뉴는 화면을 따라가게 되어있다.</span>
+                            </p>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                            <img src="img/project/project_4_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                        </div>
+                        <div class="col-md-4">
+                            <p>
+                                <span>Music Player 화면으로 위 상단 메뉴에 ALBUM을 누르면 나오는 화면이다.</span>
+                                <span>플레이 버튼을 누르면 CD가 돌아가며 노래가 나온다.</span>
+                                <span>멈춤 버튼을 누르면 돌아가던 cd와 노래가 멈춘다.</span>
+                                <span>위, 아래 CD를 누르면 다음 노래와 이전 노래가 선택가능하다.</span>
+                            </p>
+                        </div>
+                    </div>
             </div>
         </div>
         <div id="row_4" class="row content_row">
