--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <span>#jquery.mousewheel.min.js</span>
                     <span>#jquery.ui.touch-punch.min.js</span>
                     <span>#google map API</span><br/>
-                    <span>개발기간 : 2018/06/02 - 2018/06/08</span>
+                    <span>개발기간 : 2018/05/16 - 2018/05/23</span>
                 </p>
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
@@ -180,10 +180,8 @@
                         </div>
                         <div class="col-md-4">
                             <p>
-                                <span>Main 화면으로 위 상단 메뉴에 HOME을 누르면 나오는 화면이다.</span>
-                                <span>상단 메뉴는 이름에 위치하는 곳으로 이동된다.</span>
-                                <span>하단 메뉴는 SNS 아이콘을 누르면 트로이 시반관련 페이지로 넘어간다.</span>
-                                <span>상단 메뉴와 하단 메뉴는 화면을 따라가게 되어있다.</span>
+                                <span>Main 화면으로 스위치를 잡아 당기면 불이 켜지게 구현하였습니다.</span>
+                                <span>jquery.ui.touch-punch.min.js를 이용하여 드래그 & 드롭을 사용하였습니다.</span>
                             </p>
                         </div>
                         <div class="col-md-4 col-md-offset-2">
@@ -191,10 +189,9 @@
                         </div>
                         <div class="col-md-4">
                             <p>
-                                <span>Music Player 화면으로 위 상단 메뉴에 ALBUM을 누르면 나오는 화면이다.</span>
-                                <span>플레이 버튼을 누르면 CD가 돌아가며 노래가 나온다.</span>
-                                <span>멈춤 버튼을 누르면 돌아가던 cd와 노래가 멈춘다.</span>
-                                <span>위, 아래 CD를 누르면 다음 노래와 이전 노래가 선택가능하다.</span>
+                                <span>가게를 소개하는 화면입니다.</span>
+                                <span>jquery.mousewheel.min.js를 사용하였습니다.</span>
+                                <span>단 한번의 마우스 휠을 사용하여 창의 크기만큼 내려가게 구현하였습니다.</span>
                             </p>
                         </div>
                     </div>
