--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/javascript.js"></script>
@@ -22,7 +23,7 @@
         </div>
         <div id="row_2" class="row content_row">
             <div class="col-md-12">
-                <img src="img/text.png" alt="text">
+                <img src="img/text.png" alt="느낌있는 포트폴리오">
                 <span>사이트에 방문해 주셔서 감사합니다.</span><br/>
                 <span>느낌을 중요시하여 감성적이며 재미있는 웹페이지를 만듭니다.</span><br/>
                 <span>UI. UX 로 사용자의 편의와, 재미를 동시에 느끼게끔 하고 있습니다.</span>
@@ -37,36 +38,41 @@
                     <span>#CSS</span>
                     <span>#JavaScript</span>
                     <span>#jQuery</span><br/>
-                    <span>개발기간 : 2018/06/02 - 2018/06/08</span>
                 </p>
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
-                    <div class="col-md-12">
-                        <img src="img/project/project_1_main.jpg" class="img-responsive main_img" alt="main_img">
-                    </div>
                     <div class="col-md-2 col-md-offset-5">
-                        <button type="button">View WebSite</button>
+                        <a href="http://joonij.dothome.co.kr/project/singerFanSite-master/singerFanSite-master/index.html" target="_blank">
+                            <button type="button">View WebSite</button>
+                        </a><br/>
+                        <span class="period">개발기간 : 2018.06.02 - 2018.06.08</span>
                     </div>
                     <div class="col-md-4 col-md-offset-2">
                         <img src="img/project/project_1_img_1.jpg" class="img-responsive project_img" alt="project_img">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <p>
-                            <span>Main 화면으로 위 상단 메뉴에 HOME을 누르면 나오는 화면입니다.</span>
-                            <span>상단 메뉴는 이름에 위치하는 곳으로 이동됩니다.</span>
-                            <span>하단 메뉴는 SNS 아이콘을 누르면 트로이 시반관련 페이지로 넘어갑니다.</span>
-                            <span>상단 메뉴와 하단 메뉴는 화면을 따라가게 되어있습니다.</span>
+                            <span>가수 팬 페이지 Main</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>상단 메뉴는 이름에 위치하는 곳으로 이동</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>하단 메뉴 SNS 아이콘을 누르면 트로이 시반관련 페이지로 이동</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>상, 하단 메뉴는 화면을 따라가게 이동</span><br/>
                         </p>
                     </div>
                     <div class="col-md-4 col-md-offset-2">
                         <img src="img/project/project_1_img_2.jpg" class="img-responsive project_img" alt="project_img">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <p>
-                            <span>Music Player 화면으로 위 상단 메뉴에 ALBUM을 누르면 나오는 화면입니다.</span>
-                            <span>플레이 버튼을 누르면 CD가 돌아가며 노래가 나옵니다.</span>
-                            <span>멈춤 버튼을 누르면 돌아가던 cd와 노래가 멈춥니다.</span>
-                            <span>위, 아래 CD를 누르면 다음 노래와 이전 노래가 선택가능합니다.</span>
+                            <span>가수 팬 페이지 Music Player</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>플레이 버튼을 누르면 CD가 돌아가며 노래가 나옴</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>멈춤 버튼을 누르면 돌아가던 cd와 노래가 멈춤</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>위, 아래 CD를 누르면 다음 노래와 이전 노래가 선택가능</span><br/>
                         </p>
                     </div>
                 </div>
@@ -80,38 +86,45 @@
                     <span>#JavaScript</span>
                     <span>#jQuery</span>
                     <span>#google map API</span>
-                    <span>Flickity slide</span><br/>
-                    <span>개발기간 : 2018/06/12 - 2018/06/20</span>
+                    <span>#Flickity slide</span><br/>
                 </p>
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
-                        <div class="col-md-12">
-                            <img src="img/project/project_2_main.png" class="img-responsive main_img" alt="main_img">
-                        </div>
-                        <div class="col-md-2 col-md-offset-5">
+                    <div class="col-md-2 col-md-offset-5">
+                        <a href="http://joonij.dothome.co.kr/project/ashleySite-master/ashleySite-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <img src="img/project/project_2_img_1.jpg" class="img-responsive project_img" alt="project_img">
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span>Main 화면으로 상단 로고를 클릭할시 Home으로 돌아옵니다.</span>
-                                <span>상단 좌측에 메뉴바가 있고, 클릭시 링크없이 이동됩니다.</span>
-                                <span>중앙엔 슬라이드가 있어 이벤트 베너를 보여줍니다.</span>
-                            </p>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <img src="img/project/project_2_img_2.jpg" class="img-responsive project_img" alt="project_img">
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span>Store 화면으로 가게의 위치를 알려주는 화면입니다.</span>
-                                <span>우측에 가게별 버튼을 누르면 지도 상에 표시가 됩니다.</span>
-                                <span>google map API를 사용하여 구현하였습니다.</span>
-                            </p>
-                        </div>
+                            <span class="period">개발기간 : 2018.06.12 - 2018.06.20</span>
+                        </a>
                     </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_2_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>애슐리 Main Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>상단 로고를 클릭할시 Home으로 이동</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>상단 좌측에 메뉴바가 있고, 클릭시 링크없이 이동</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>중앙 슬라이드에서 이벤트 베너를 확인</span><br/>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_2_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>애슐리 Store Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>Store 화면으로 가게의 위치를 알려주는 화면</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>우측에 가게별 버튼을 누르면 지도 상에 표시.</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>google map API를 사용하여 구현</span><br/>
+                        </p>
+                    </div>
+                </div>
             </div>
             <div id="project_3" class="col-md-12 project">
                 <span>Vincent van Gogh Gallery</span>
@@ -122,37 +135,44 @@
                     <span>#JavaScript</span>
                     <span>#jQuery</span>
                     <span>#jquery.eraser.js</span><br/>
-                    <span>개발기간 : 2018/05/23 - 2018/05/30</span>
                 </p>
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
-                        <div class="col-md-12">
-                            <img src="img/project/project_3_main.jpg" class="img-responsive main_img" alt="main_img">
-                        </div>
-                        <div class="col-md-2 col-md-offset-5">
+                    <div class="col-md-2 col-md-offset-5">
+                        <a href="http://joonij.dothome.co.kr/project/elevatorPortfolio-master/elevatorPortfolio-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <img src="img/project/project_3_img_1.jpg" class="img-responsive project_img" alt="project_img">
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span>Main 화면으로 jquery.eraser.js를 사용하여 화면 지우기를 구현하였습니다.</span>
-                                <span>다만 IE에선 지원을 안함으로 클릭으로 대체하였습니다.</span>
-                                <span>지우게를 사용하듯 클릭하여 지우면 뒤에 화면이 보일것입니다.</span>
-                                <span>일정치 만큼 지워지면 화면이 사라집니다.</span>
-                            </p>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <img src="img/project/project_3_img_2.jpg" class="img-responsive project_img" alt="project_img">
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span>우측 엘레베이터를 사용하여 2층으로 올라간 화면입니다.</span>
-                                <span>우측 엘레베이터는 문열림 버튼과 문열릴시 이동버튼 두가지가 있습니다.</span>
-                            </p>
-                        </div>
+                            <span class="period">개발기간 : 2018.05.23 - 2018.05.30</span>
+                        </a>
                     </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_3_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>고흐 겔러리 Start Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>시작 화면으로 jquery.eraser.js를 사용하여 화면 지우기를 구현</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>IE에선 지원을 안함으로 클릭으로 대체</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>지우개를 사용하듯 클릭하여 드래그시 뒤 Page 보임</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>일정치 만큼 지워지면 화면이 사라짐</span><br/>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_3_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>고흐 겔러리 Main Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>우측 엘레베이터를 사용하여 2층으로 올라간 화면</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>우측 엘레베이터는 문열림 버튼과 문열릴시 이동버튼 두가지.</span><br/>
+                        </p>
+                    </div>
+                </div>
             </div>
             <div id="project_4" class="col-md-12 project">
                 <span>Izakaya Heekare</span>
@@ -165,36 +185,40 @@
                     <span>#jquery.mousewheel.min.js</span>
                     <span>#jquery.ui.touch-punch.min.js</span>
                     <span>#google map API</span><br/>
-                    <span>개발기간 : 2018/05/16 - 2018/05/23</span>
                 </p>
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
-                        <div class="col-md-12">
-                            <img src="img/project/project_4_main.jpg" class="img-responsive main_img" alt="main_img">
-                        </div>
-                        <div class="col-md-2 col-md-offset-5">
+                    <div class="col-md-2 col-md-offset-5">
+                        <a href="http://joonij.dothome.co.kr/project/IzakayWebPage-master/IzakayWebPage-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <img src="img/project/project_4_img_1.jpg" class="img-responsive project_img" alt="project_img">
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span>Main 화면으로 스위치를 잡아 당기면 불이 켜지게 구현하였습니다.</span>
-                                <span>jquery.ui.touch-punch.min.js를 이용하여 드래그 & 드롭을 사용하였습니다.</span>
-                            </p>
-                        </div>
-                        <div class="col-md-4 col-md-offset-2">
-                            <img src="img/project/project_4_img_2.jpg" class="img-responsive project_img" alt="project_img">
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                <span>가게를 소개하는 화면입니다.</span>
-                                <span>jquery.mousewheel.min.js를 사용하였습니다.</span>
-                                <span>단 한번의 마우스 휠을 사용하여 창의 크기만큼 내려가게 구현하였습니다.</span>
-                            </p>
-                        </div>
+                            <span class="period">개발기간 : 2018.05.16 - 2018.05.23</span>
+                        </a>
                     </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_4_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>이자카야 히카리 Main Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>Main 화면으로 스위치를 잡아 당기면 불이 켜지게 구현</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>jquery.ui.touch-punch.min.js를 이용하여 드래그 & 드롭을 사용</span><br/>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_4_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>이자카야 히카리 Introduce Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>jquery.mousewheel.min.js를 사용</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>한번의 마우스 휠을 사용, 창의 크기만큼 내려가게 구현</span><br/>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="row_4" class="row content_row">
@@ -203,15 +227,22 @@
                 <img src="img/comma.png" alt="comma">
             </div>
             <div class="col-md-5 col-md-offset-2">
-                    <span>Contacts</span>
-                    <span>joonij93@gmail.com</span>
-                    <span>010-4488-9752</span>
-                    <span>
-                        <a href="https://github.com/joonij" target="_blank">Please click here, My GITHUB</a>
-                    </span>
-                    <span>
-                        <a href="http://coding-teardown.tistory.com/" target="_blank">Please click here, My blog</a>
-                    </span>
+                <span>Contact ME :)</span>
+                <span>THANK YOU FOR YOUR INTEREST IN CONTACTING ME!</span>
+                <i class="fas fa-envelope"></i>
+                <span>joonij93@gmail.com</span><br/>
+                <i class="fas fa-mobile-alt"></i>
+                <span>010-4488-9752</span><br/>
+                <span>
+                    <a href="https://github.com/joonij" target="_blank">
+                        <button type="button" id="github">GITHUB</button>
+                    </a>
+                </span>
+                <span>
+                    <a href="http://coding-teardown.tistory.com/" target="_blank">
+                        <button type="button" id="blog">BLOG</button>
+                    </a>
+                </span>
             </div>
         </div>
     </div>
