--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <span>고흐 겔러리 Start Page</span><br/>
+                            <span>고흐 갤러리 Start Page</span><br/>
                             <i class="far fa-check-square"></i>
                             <span>시작 화면으로 jquery.eraser.js를 사용하여 화면 지우기를 구현</span><br/>
                             <i class="far fa-check-square"></i>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <span>고흐 겔러리 Main Page</span><br/>
+                            <span>고흐 갤러리 Main Page</span><br/>
                             <i class="far fa-check-square"></i>
                             <span>우측 엘레베이터를 사용하여 2층으로 올라간 화면</span><br/>
                             <i class="far fa-check-square"></i>
