--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
                     <div class="col-md-2 col-md-offset-5">
-                        <a href="http://joonij.dothome.co.kr/project/singerFanSite-master/singerFanSite-master/index.html" target="_blank">
+                        <a href="http://www.jooninim.com/project/singerFanSite-master/singerFanSite-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
                         </a><br/>
                         <span class="period">개발기간 : 2018.06.02 - 2018.06.08</span>
@@ -91,7 +91,7 @@
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
                     <div class="col-md-2 col-md-offset-5">
-                        <a href="http://joonij.dothome.co.kr/project/ashleySite-master/ashleySite-master/index.html" target="_blank">
+                        <a href="http://www.jooninim.com/project/ashleySite-master/ashleySite-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
                             <span class="period">개발기간 : 2018.06.12 - 2018.06.20</span>
                         </a>
@@ -139,7 +139,7 @@
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
                     <div class="col-md-2 col-md-offset-5">
-                        <a href="http://joonij.dothome.co.kr/project/elevatorPortfolio-master/elevatorPortfolio-master/index.html" target="_blank">
+                        <a href="http://www.jooninim.com/project/elevatorPortfolio-master/elevatorPortfolio-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
                             <span class="period">개발기간 : 2018.05.23 - 2018.05.30</span>
                         </a>
@@ -190,7 +190,7 @@
                 <div class="plus-to-minus"></div>
                 <div class="col-md-12 detail">
                     <div class="col-md-2 col-md-offset-5">
-                        <a href="http://joonij.dothome.co.kr/project/IzakayWebPage-master/IzakayWebPage-master/index.html" target="_blank">
+                        <a href="http://www.jooninim.com/project/IzakayWebPage-master/IzakayWebPage-master/index.html" target="_blank">
                             <button type="button">View WebSite</button>
                             <span class="period">개발기간 : 2018.05.16 - 2018.05.23</span>
                         </a>
