--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
 
 <body>
     <div class="container-fluid">
-        <div id="row_1" class="row content_row">
+        <div id="row_1" class="row">
             <div class="col-md-12">
-                <img src="img/main.png" alt="main">
+                <img id="main_img" src="img/main_1.png" alt="main_1">
+                <img id="main_text" src="img/main_2.png" alt="main_2">
                 <span>Scroll Down</span>
             </div>
         </div>
-        <div id="row_2" class="row content_row">
+        <div id="row_2" class="row">
             <div class="col-md-12">
                 <img src="img/text.png" alt="느낌있는 포트폴리오">
             </div>
         </div>
-        <div id="row_3" class="row content_row">
+        <div id="row_3" class="row">
             <div id="project_1" class="col-md-12 project">
                 <span>Troye Sivan Fan Page</span>
                 <p>
@@ -219,7 +220,7 @@
                 </div>
             </div>
         </div>
-        <div id="row_4" class="row content_row">
+        <div id="row_4" class="row">
             <div class="col-md-2 col-md-offset-3">
                 <img src="img/comma_back.png" alt="comma_back">
                 <img src="img/comma.png" alt="comma">
