--- a/index.html
+++ b/index.html
@@ -219,6 +219,55 @@
                     </div>
                 </div>
             </div>
+            <div id="project_5" class="col-md-12 project">
+                <span>Fontamaing</span>
+                <p>
+                    <span>Vuejs로 만든 웹페이지입니다.</span>
+                    <span>#HTML</span>
+                    <span>#CSS</span>
+                    <span>#JavaScript</span>
+                    <span>#jQuery</span>
+                    <span>#Vue.js</span>
+                    <span>#반응형 웹</span><br/>
+                </p>
+                <div class="plus-to-minus"></div>
+                <div class="col-md-12 detail">
+                    <div class="col-md-2 col-md-offset-5">
+                        <a href="http://www.jooninim.com/project/fontChangeWebPage-master/fontChangeWebPage-master/index.html" target="_blank">
+                            <button type="button">View WebSite</button>
+                            <span class="period">개발기간 : 2018.07.25 - 2018.07.26</span>
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_4_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>Fontamaing Main Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>원하는 폰트 찾는 사이트</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>구글 웹폰트 사용</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>한글만 원할 경우 check 박스 클릭</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>새로운 폰트를 원할 경우 research 박스 클릭</span><br/>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-md-offset-2">
+                        <img src="img/project/project_4_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span>Fontamaing 반응형 Page</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>해상도에 맞춰 구역이 나뉨</span><br/>
+                            <i class="far fa-check-square"></i>
+                            <span>3단계로 나누어짐</span><br/>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="row_4" class="row">
             <div class="col-md-2 col-md-offset-3">
