--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-md-offset-2">
-                        <img src="img/project/project_4_img_1.jpg" class="img-responsive project_img" alt="project_img">
+                        <img src="img/project/project_5_img_1.jpg" class="img-responsive project_img" alt="project_img">
                     </div>
                     <div class="col-md-6">
                         <p>
@@ -249,13 +249,14 @@
                             <i class="far fa-check-square"></i>
                             <span>구글 웹폰트 사용</span><br/>
                             <i class="far fa-check-square"></i>
-                            <span>한글만 원할 경우 check 박스 클릭</span><br/>
+                            <span id="connect_1">영문폰트가 한글을 지원 하지 않는 경우를 위하여,</span><br/>
+                            <span id="connect_2">한글폰트만 원할 경우 체크박스 클릭</span><br/>
                             <i class="far fa-check-square"></i>
-                            <span>새로운 폰트를 원할 경우 research 박스 클릭</span><br/>
+                            <span>새로운 폰트를 원할 경우 research 클릭</span><br/>
                         </p>
                     </div>
                     <div class="col-md-4 col-md-offset-2">
-                        <img src="img/project/project_4_img_2.jpg" class="img-responsive project_img" alt="project_img">
+                        <img src="img/project/project_5_img_2.jpg" class="img-responsive project_img" alt="project_img">
                     </div>
                     <div class="col-md-6">
                         <p>
@@ -263,7 +264,7 @@
                             <i class="far fa-check-square"></i>
                             <span>해상도에 맞춰 구역이 나뉨</span><br/>
                             <i class="far fa-check-square"></i>
-                            <span>3단계로 나누어짐</span><br/>
+                            <span>4단계로 나누어짐</span><br/>
                         </p>
                     </div>
                 </div>
